--- a/Colab_ChatGLM.ipynb
+++ b/Colab_ChatGLM.ipynb
@@ -353,10 +353,10 @@
       "metadata": {
         "cellView": "form",
         "id": "UjcLVSLBLdHX",
-        "outputId": "21be1b90-0dc4-4b7b-c99b-8f7afa90892d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "21be1b90-0dc4-4b7b-c99b-8f7afa90892d"
       },
       "execution_count": 1,
       "outputs": [
@@ -375,10 +375,10 @@
       "metadata": {
         "cellView": "form",
         "id": "52QXFL73_0Pl",
-        "outputId": "ba7dc26d-4440-4cc7-c695-4a51d717d54a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ba7dc26d-4440-4cc7-c695-4a51d717d54a"
       },
       "outputs": [
         {
@@ -523,6 +523,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#修复bug https://github.com/googlecolab/colabtools/issues/3409\n",
         "import locale\n",
         "locale.getpreferredencoding = lambda: \"UTF-8\""
       ],
@@ -565,10 +566,10 @@
       ],
       "metadata": {
         "id": "jIiNeWyKAL6V",
-        "outputId": "9d6b9dca-4482-4a21-b076-78a14801572f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9d6b9dca-4482-4a21-b076-78a14801572f"
       },
       "execution_count": 16,
       "outputs": [
@@ -646,10 +647,10 @@
       "metadata": {
         "cellView": "form",
         "id": "m_FzCEwuUvKq",
-        "outputId": "9a9d450a-ff9e-4adb-8d69-114d525fcf35",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9a9d450a-ff9e-4adb-8d69-114d525fcf35"
       },
       "execution_count": 7,
       "outputs": [
@@ -746,7 +747,6 @@
       "metadata": {
         "cellView": "form",
         "id": "XYEVkeAqduqL",
-        "outputId": "3944ac1f-1829-4563-8191-a8579b6fecea",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 253,
@@ -755,7 +755,8 @@
             "1fe2fd01a87a4564b57e084c442c407f",
             "24c561f60e6547b6b46cc8ed0118913b"
           ]
-        }
+        },
+        "outputId": "3944ac1f-1829-4563-8191-a8579b6fecea"
       },
       "execution_count": 11,
       "outputs": [
@@ -805,10 +806,10 @@
       "metadata": {
         "cellView": "form",
         "id": "kTAUdZZ1kniH",
-        "outputId": "233a5dac-37b1-4342-f022-408490b5246e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "233a5dac-37b1-4342-f022-408490b5246e"
       },
       "execution_count": 10,
       "outputs": [
@@ -1112,7 +1113,6 @@
       ],
       "metadata": {
         "id": "CNygeoOO_dfA",
-        "outputId": "17b1a5d9-f565-4423-9e8d-d838437c0b95",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 360,
@@ -1124,7 +1124,8 @@
             "4c3db9fc83b0443e98fe8206ac4f9dd1",
             "06fffb59b0054caf99e6c9dca75921f7"
           ]
-        }
+        },
+        "outputId": "17b1a5d9-f565-4423-9e8d-d838437c0b95"
       },
       "execution_count": 12,
       "outputs": [
